-
Bug
-
Resolution: Fixed
-
P3
-
8, 9, 10
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8194806 | 10 | Guru Hb | P3 | Resolved | Fixed | |
| JDK-8194807 | 8u172 | Guru Hb | P3 | Resolved | Fixed | b02 |
| JDK-8195146 | 8u171 | Guru Hb | P3 | Resolved | Fixed | b03 |
FULL PRODUCT VERSION :
1.9.01
ADDITIONAL OS VERSION INFORMATION :
Windows 7 and 10
EXTRA RELEVANT SYSTEM CONFIGURATION :
standard setup
A DESCRIPTION OF THE PROBLEM :
if you have following js code, the jvm crashes completely.
...
var reader=new FileReader()
reader. readAsBinaryString(f)
These is reproducable on all read methods.
visual studio seems to identify an internal null pointer exception.
REGRESSION. Last worked in version 8u152
ADDITIONAL REGRESSION INFORMATION:
always same result. it's possible to create a filereader instance, getting file properties, slicing a blob.
but reading crash.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
See also html5rocks/tutorials/file/dndfiles
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
it's possible to read a file.
REPRODUCIBILITY :
This bug can be reproduced always.
1.9.01
ADDITIONAL OS VERSION INFORMATION :
Windows 7 and 10
EXTRA RELEVANT SYSTEM CONFIGURATION :
standard setup
A DESCRIPTION OF THE PROBLEM :
if you have following js code, the jvm crashes completely.
...
var reader=new FileReader()
reader. readAsBinaryString(f)
These is reproducable on all read methods.
visual studio seems to identify an internal null pointer exception.
REGRESSION. Last worked in version 8u152
ADDITIONAL REGRESSION INFORMATION:
always same result. it's possible to create a filereader instance, getting file properties, slicing a blob.
but reading crash.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
See also html5rocks/tutorials/file/dndfiles
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
it's possible to read a file.
REPRODUCIBILITY :
This bug can be reproduced always.
- backported by
-
JDK-8194806 Webengine (webkit) crash when reading files using FileReader
-
- Resolved
-
-
JDK-8194807 Webengine (webkit) crash when reading files using FileReader
-
- Resolved
-
-
JDK-8195146 Webengine (webkit) crash when reading files using FileReader
-
- Resolved
-
- relates to
-
JDK-8194294 [TEST BUG] Manual Test for WebView FileReader API
-
- Resolved
-
-
JDK-8197790 FileReader does not work
-
- Closed
-