8194265: Webengine (webkit) crash when reading files using FileReader

Reviewed-by: arajkumar, rkamath, mbilla